--- a/ElectronicLogbook/Source/ElectronicLogbook.csproj
+++ b/ElectronicLogbook/Source/ElectronicLogbook.csproj
@@ -89,6 +89,9 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Settings.cs" />
+    <Compile Include="VAISParticipantControl.xaml.cs">
+      <DependentUpon>VAISParticipantControl.xaml</DependentUpon>
+    </Compile>
     <Page Include="AircraftEquipment\AircraftEquipmentControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -101,6 +104,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="VAISParticipantControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
